--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.1.54",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": "^21.1.3",
     "@types/node": "^18.17.17",
+    "@unocss/preset-icons": "^0.56.5",
+    "@unocss/transformer-directives": "^0.56.5",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@vue/eslint-config-typescript": "^12.0.0",
@@ -36,6 +39,7 @@
     "npm-run-all2": "^6.0.6",
     "start-server-and-test": "^2.0.0",
     "typescript": "~5.2.0",
+    "unocss": "^0.56.5",
     "vite": "^4.4.9",
     "vite-plugin-vue-devtools": "^1.0.0-rc.5",
     "vitest": "^0.34.4",
