--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "start-server-and-test": "^2.0.0",
     "typescript": "~5.2.0",
     "unocss": "^0.56.5",
+    "unplugin-auto-import": "^0.16.6",
     "vite": "^4.4.9",
     "vite-plugin-vue-devtools": "^1.0.0-rc.5",
     "vitest": "^0.34.4",
