--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-vue3-starter",
-  "version": "0.0.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -16,13 +16,15 @@
   "engines": {
     "node": ">=20.0.0"
   },
+  "type": "module",
   "dependencies": {
     "@unhead/vue": "^1.7.4",
     "@vueuse/core": "^10.4.1",
     "pinia": "^2.1.6",
-    "vue": "^3.3.4",
+    "vite": "^5.4.8",
+    "vue": "^3.5.4",
     "vue-i18n": "9",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.4.4"
   },
   "devDependencies": {
     "@iconify-json/mdi": "^1.1.54",
@@ -30,8 +32,6 @@
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": "^21.1.3",
     "@types/node": "^18.17.17",
-    "@unocss/preset-icons": "^0.56.5",
-    "@unocss/transformer-directives": "^0.56.5",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@vue/eslint-config-typescript": "^12.0.0",
@@ -45,9 +45,8 @@
     "npm-run-all2": "^6.0.6",
     "start-server-and-test": "^2.0.0",
     "typescript": "~5.2.0",
-    "unocss": "^0.56.5",
+    "unocss": "^0.63.3",
     "unplugin-auto-import": "^0.16.6",
-    "vite": "^4.4.9",
     "vite-plugin-vue-devtools": "^1.0.0-rc.5",
     "vitest": "^0.34.4",
     "vue-tsc": "^1.8.11"
