--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-vue3-starter",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -20,6 +20,8 @@
   "dependencies": {
     "@unhead/vue": "^1.7.4",
     "@vueuse/core": "^10.4.1",
+    "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "pinia": "^2.1.6",
     "vite": "^5.4.8",
     "vue": "^3.5.4",
